--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -17,8 +17,8 @@
     <% end %>
 
     <%= turbo_frame_tag 'searchResults' do %>
-      <div class="flex flex-col items-center justify-center gap-6 mt-12">
-        <p class="text-soft text-center">Start typing to find teams or other members.</p>
+      <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+        <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">Start typing to find teams or other members.</p>
       </div>
     <% end %>
   </div>
