--- a/app/views/teams/show/_join_requests.html.erb
+++ b/app/views/teams/show/_join_requests.html.erb
@@ -1,7 +1,7 @@
 <div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading">Join Requests</h1>
   <p class="text-soft text-pretty">
-    <% num = join_requests.count %>
+    <% num = join_requests.size %>
 
     <% if num == 0 %>
       There are no pending join requests for this team.
@@ -20,7 +20,7 @@
     <% end %>
   </div>
 <% else %>
-  <div class="flex flex-col items-center justify-center gap-6 py-12">
-    <p class="text-soft text-center">No new join requests.</p>
+  <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+    <p class="font-semibold text-center">No pending join requests</p>
   </div>
 <% end %>
