--- a/app/views/teams/show/_member_list.html.erb
+++ b/app/views/teams/show/_member_list.html.erb
@@ -6,8 +6,9 @@
       <% end %>
     </div>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <p class="text-soft text-center">No team members found.</p>
+    <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+      <p class="font-semibold">No search results</p>
+      <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">Sorry, we couldn&#8217;t find any results for &#8220;<%= @query %>&#8221;.</p>
     </div>
   <% end %>
 </div>
