--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -1,6 +1,6 @@
 <div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading">Runs Today</h1>
-  <p class="text-soft">Runs <%= user == current_user ? 'you have' : "#{user.first_name} has" %> gone on today.</p>
+  <p class="text-soft">Runs <%= user == current_user ? 'you have' : "#{user.first_name} has" %> logged today.</p>
 </div>
 <% runs_today = user.runs_today %>
 
@@ -14,12 +14,16 @@
       <%= render run %>
     <% end %>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <% if user == current_user %>
-        <p class="text-soft text-center">You haven&#8217;t gone on any runs yet today.</p>
-      <% else %>
-        <p class="text-soft text-center"><%= user.default_name %> hasn&#8217;t gone on any runs yet today.</p>
-      <% end %>
+    <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+      <p class="font-semibold">No runs today</p>
+
+      <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">
+        <% if user == current_user %>
+          You haven&#8217;t logged any runs yet today.
+        <% else %>
+          <%= user.default_name %> hasn&#8217;t logged any runs yet today.
+        <% end %>
+      </p>
     </div>
   <% end %>
 </div>
