--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -1,7 +1,7 @@
 <% user_is_current = user == current_user %>
 
 <div class="mb-24">
-  <div class="pb-6 my-6 border-b border-slate-200 dark:border-slate-700">
+  <div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
     <h1 class="heading"><%= user_is_current ? 'Your' : "#{user.first_name}’s" %> Teams</h1>
     <p class="text-soft">Teams <%= user_is_current ? 'you coach' : "#{user.first_name} coaches" %>.</p>
   </div>
