style(runs): change edit button text to "Save changes"

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -182,7 +182,7 @@
   <% if modal_style_buttons %>
     <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
       <button data-action="mousedown->modal#close" data-modal-id="<%= form.object.new_record? ? 'newRunModal' : "editRunModal_#{run.id}" %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
-      <%= form.submit  form.object.new_record? ? 'Create run' : 'Update run', class: 'btn btn-primary w-full sm:w-auto', data: { action: 'mousedown->modal#close' } %>
+      <%= form.submit  form.object.new_record? ? 'Create run' : 'Save changes', class: 'btn btn-primary w-full sm:w-auto', data: { action: 'mousedown->modal#close' } %>
     </div>
   <% else %>
     <div class="flex flex-wrap items-center gap-4 pt-6 border-t border-slate-200 dark:border-slate-700">
